--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#7cb5e4</color>
+    <color name="colorPrimaryDark">#0a6e60</color>
+    <color name="colorAccent">#070848</color>
+    <color name="background_material_light">#a8dae6</color>
 </resources>
