--- a/app/src/main/res/layout/daily_view_frag.xml
+++ b/app/src/main/res/layout/daily_view_frag.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Daily_view_frag">
+    tools:context="com.measurelet.Daily_view_frag">
 
 </android.support.constraint.ConstraintLayout>
