--- a/app/src/main/res/layout/login_screen_act.xml
+++ b/app/src/main/res/layout/login_screen_act.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginScreen_act">
+    tools:context="com.measurelet.LoginScreen_act">
 
 </android.support.constraint.ConstraintLayout>
