--- a/app/src/main/res/layout/main_nav_header.xml
+++ b/app/src/main/res/layout/main_nav_header.xml
@@ -18,7 +18,7 @@
         android:layout_height="72dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/profil" />
+        app:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:layout_width="match_parent"
