--- a/app/src/main/res/layout/registration_custom_frag.xml
+++ b/app/src/main/res/layout/registration_custom_frag.xml
@@ -1,9 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--TODO Emil-->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.measurelet.Registration_custom_frag">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/roundedcorners"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/guideline8"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guide45">
+
+        <ScrollView
+            android:id="@+id/andet"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="135dp"
+            tools:layout_editor_absoluteY="434dp">
+
+        </ScrollView>
+    </LinearLayout>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidetop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guide45"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guidelowermid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.65" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideleft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.10" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <TextView
+        android:id="@+id/drink"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/guideline35"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guidetop"
+        tools:text="@string/drink" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guide55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline35"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <TextView
+        android:id="@+id/amount"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@+id/guide55"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guideline8"
+        tools:text="@string/amount" />
+
+    <LinearLayout
+        android:id="@+id/setsynligt"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/roundedcorners"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guide45"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guideline35">
+
+        <ScrollView
+            android:id="@+id/scrollvalg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            tools:layout_editor_absoluteX="135dp"
+            tools:layout_editor_absoluteY="434dp">
+
+        </ScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/roundedcorners"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guidelowermid"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guide55">
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:autoSizeTextType="uniform"
+            android:inputType="number"
+            android:text=" Indtast her"
+            tools:layout_editor_absoluteX="167dp"
+            tools:layout_editor_absoluteY="403dp" />
+    </LinearLayout>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.45" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="?android:attr/colorBackground"
+        android:src="@drawable/rippleplusb"
+        app:layout_constraintBottom_toTopOf="@+id/guideline10"
+        app:layout_constraintEnd_toStartOf="@+id/guideright"
+        app:layout_constraintStart_toStartOf="@+id/guideleft"
+        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.65" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.90" />
 
 </android.support.constraint.ConstraintLayout>
