--- a/app/src/main/res/layout/registration_standard_frag.xml
+++ b/app/src/main/res/layout/registration_standard_frag.xml
@@ -125,8 +125,8 @@
             android:drawableLeft="@drawable/ic_coffee_cup"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:textAllCaps="false"
-            tools:text="@string/kaffeml" />
+            android:text="@string/kaffeml"
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/saftevand"
