--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#7cb5e4</color>
     <color name="colorPrimaryDark">#0a6e60</color>
     <color name="colorAccent">#070848</color>
-    <color name="background_material_light">#a8dae6</color>
+    <color name="background_color">#a8dae6</color>
+    <color name="background_darker">#83d1e4</color>
+    <color name="black">#000000</color>
 </resources>
