Lidt logik implementeret

--- a/app/src/main/res/drawable-v24/ovalbutton.xml
+++ b/app/src/main/res/drawable-v24/ovalbutton.xml
@@ -37,7 +37,7 @@
                 android:topLeftRadius="30dp"
                 android:topRightRadius="30dp" />
 
-            <solid android:color="@color/background_material_light" />
+            <solid android:color="@color/colorPrimary" />
 
             <padding
                 android:bottom="0dp"
