--- a/app/src/main/res/layout/login_screen_act.xml
+++ b/app/src/main/res/layout/login_screen_act.xml
@@ -103,7 +103,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/nextbutton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
