--- a/app/src/main/res/layout/dashboard_frag.xml
+++ b/app/src/main/res/layout/dashboard_frag.xml
@@ -191,7 +191,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/background_color"
-            android:src="@drawable/add_btn" />
+            android:src="@drawable/rippleplusb" />
 
         <TextView
             android:id="@+id/add_text"
